Update fragment framework
Merge fragment state manager
Add special effects implementations
Add on back pressed callback
Update Lifecycle package
Update fragment animations